--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Alarm clock for fishing spot",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "repository": {
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@types/faker": "^5.5.9",
+    "@types/jest": "^29.1.1",
     "@types/node": "^16.11.11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.5.0",
@@ -40,8 +42,10 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-typescript": "^0.14.0",
     "faker": "^5.5.3",
-    "jest": "^27.4.3",
+    "jest": "^29.1.2",
     "prettier": "^2.5.1",
+    "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
     "typescript": "^4.5.2"
   }
 }
