feat(fish): add more member data to fish class + test config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,33 @@
 {
-  "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "./lib",
-    "lib": ["esnext", "esnext.array"],
-    "types": ["jest", "node"],
-    "target": "es2017",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "strict": true,
-    "noEmitOnError": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "inlineSources": true,
-    "downlevelIteration": true
-  },
+    "compilerOptions": {
+     "baseUrl": ".",
+      "outDir": "lib",
+      "lib": [
+        "esnext",
+        "esnext.array"
+      ],
+      "types": [
+        "jest",
+        "node"
+      ],
+      "target": "es6",
+      "module": "commonjs",
+      "esModuleInterop": true,
+      "moduleResolution": "node",
+      "strict": true,
+      "noEmitOnError": true,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "emitDecoratorMetadata": true,
+      "experimentalDecorators": true,
+      "sourceMap": true,
+      "inlineSources": true,
+      "downlevelIteration": true,
+    },
   "include": ["."],
-  "exclude": ["node_modules", "src/test", "lib"]
-}
+    "exclude": [
+      "node_modules",
+      "test",
+      "lib"
+    ]
+  }
