--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,21 @@
     "@xivapi/js": "^0.3.3",
     "eorzea-time": "^3.0.0",
     "eorzea-weather": "^3.2.0"
+  },
+  "jest": {
+    "coverageReporters": [
+      "json",
+      "html"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "./src/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "lines": 80
+      }
+    }
   },
   "devDependencies": {
     "@types/faker": "^5.5.9",
