--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,23 @@
 {
-    "compilerOptions": {
-     "baseUrl": ".",
-      "outDir": "lib",
-      "lib": [
-        "esnext",
-        "esnext.array"
-      ],
-      "types": [
-        "jest",
-        "node"
-      ],
-      "target": "es6",
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "moduleResolution": "node",
-      "strict": true,
-      "noEmitOnError": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "sourceMap": true,
-      "inlineSources": true,
-      "downlevelIteration": true,
-    },
+  "compilerOptions": {
+    "baseUrl": ".",
+    "outDir": "lib",
+    "lib": ["esnext", "esnext.array"],
+    "types": ["jest", "node"],
+    "target": "es6",
+    "module": "commonjs",
+    "esModuleInterop": true,
+    "moduleResolution": "node",
+    "strict": true,
+    "noEmitOnError": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "inlineSources": true,
+    "downlevelIteration": true
+  },
   "include": ["."],
-    "exclude": [
-      "node_modules",
-      "test",
-      "lib"
-    ]
-  }
+  "exclude": ["node_modules", "src/__tests__", "lib"]
+}
