Feat/fish add fish (#12)
* feat(fish): add more member data to fish class + test config

* feat(fish): add new member var into fish + jest config

* Fixs new fish colletion, fix test + jest config

* chore(package): add lint command

* chore(readme): Add small documentation about the fish class

* fix(file data): remove file data test

* fix(Service): remove dummy poesson service

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "outDir": "./lib",
+    "outDir": "lib",
     "lib": ["esnext", "esnext.array"],
     "types": ["jest", "node"],
-    "target": "es2017",
+    "target": "es6",
     "module": "commonjs",
     "esModuleInterop": true,
     "moduleResolution": "node",
@@ -19,5 +19,5 @@
     "downlevelIteration": true
   },
   "include": ["."],
-  "exclude": ["node_modules", "src/test", "lib"]
+  "exclude": ["node_modules", "src/__tests__", "lib"]
 }
